--- a/src/main/resources/html/backup/example1.html
+++ b/src/main/resources/html/backup/example1.html
@@ -1,3 +1,16 @@
+<!DOCTYPE HTML>
+<html>
+<head>
+  <title>Graph 3D demo</title>
+
+  <style>
+    body {font: 10pt arial;}
+  </style>
+
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.css">
+
+  <script type="text/javascript">
   var data = null;
   var graph = null;
 
@@ -41,4 +54,10 @@
     var container = document.getElementById('mygraph');
     graph3d = new vis.Graph3d(container, data, options);
   }
-  drawVisualization();
+  </script>
+</head>
+
+<body onload="drawVisualization();">
+  <div id="mygraph"></div>
+</body>
+</html>
