--- a/src/main/resources/html/samples/example1.html
+++ b/src/main/resources/html/samples/example1.html
@@ -1,63 +1,76 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-  <title>Graph 3D demo</title>
-
-  <style>
-    body {font: 10pt arial;}
-  </style>
-
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.css">
-
-  <script type="text/javascript">
-  var data = null;
-  var graph = null;
-
-  function custom(x, y) {
-    return (Math.sin(x/50) * Math.cos(y/50) * 50 + 50);
-  }
-
-  // Called when the Visualization API is loaded.
-  function drawVisualization() {
-    // Create and populate a data table.
-    var data = new vis.DataSet();
-    // create some nice looking data with sin/cos
-    var steps = 50;  // number of datapoints will be steps*steps
-    var axisMax = 314;
-    var axisStep = axisMax / steps;
-    for (var x = 0; x < axisMax; x+=axisStep) {
-      for (var y = 0; y < axisMax; y+=axisStep) {
-        var value = custom(x, y);
-        data.add({
-          x: x,
-          y: y,
-          z: value,
-          style: value
-        });
-      }
-    }
-
-    // specify options
-    var options = {
-      width:  '600px',
-      height: '600px',
-      style: 'surface',
-      showPerspective: true,
-      showGrid: true,
-      showShadow: false,
-      keepAspectRatio: true,
-      verticalRatio: 0.5
-    };
-
-    // create a graph3d
-    var container = document.getElementById('mygraph');
-    graph3d = new vis.Graph3d(container, data, options);
-  }
-  </script>
-</head>
-
-<body onload="drawVisualization();">
-  <div id="mygraph"></div>
-</body>
+<!DOCTYPE html>
+<html style="height: 100%">
+   <head>
+       <meta charset="utf-8">
+   </head>
+   <body style="height: 100%; margin: 0">
+       <div id="container" style="height: 100%"></div>
+       <script type="text/javascript" src="https://{{host}}:{{port}}/ext/echarts.min.js"></script>
+       <script type="text/javascript" src="https://{{host}}:{{port}}/ext/echarts-gl.min.js"></script>
+       <script type="text/javascript" src="https://{{host}}:{{port}}/ext/ecStat.min.js"></script>
+       <script type="text/javascript" src="https://{{host}}:{{port}}/ext/dataTool.min.js"></script>
+       <script type="text/javascript" src="https://{{host}}:{{port}}/ext/bmap.min.js"></script>
+       <script type="text/javascript" src="https://{{host}}:{{port}}/ext/simplex.js"></script>
+       <script type="text/javascript">
+var dom = document.getElementById("container");
+var myChart = echarts.init(dom);
+var app = {};
+option = null;
+option = {
+    tooltip: {},
+    backgroundColor: '#fff',
+    visualMap: {
+        show: false,
+        dimension: 2,
+        min: -1,
+        max: 1,
+        inRange: {
+            color: ['#313695', '#4575b4', '#74add1', '#abd9e9', '#e0f3f8', '#ffffbf', '#fee090', '#fdae61', '#f46d43', '#d73027', '#a50026']
+        }
+    },
+    xAxis3D: {
+        type: 'value'
+    },
+    yAxis3D: {
+        type: 'value'
+    },
+    zAxis3D: {
+        type: 'value',
+        max: 1,
+        splitNumber: 2
+    },
+    grid3D: {
+        viewControl: {
+            // projection: 'orthographic'
+        },
+        boxHeight: 40
+    },
+    series: [{
+        type: 'surface',
+        wireframe: {
+            show: false
+        },
+        shading: 'color',
+        equation: {
+            x: {
+                step: 0.05,
+                min: -3,
+                max: 3,
+            },
+            y: {
+                step: 0.05,
+                min: -3,
+                max: 3,
+            },
+            z: function (x, y) {
+                return Math.sin(x * x + y * y) * x / 3.14
+            }
+        }
+    }]
+};
+if (option && typeof option === "object") {
+    myChart.setOption(option, true);
+}
+       </script>
+   </body>
 </html>
